<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_characters"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/black"
        android:text="@string/button_characters"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/button_locations"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:text="@string/button_locations"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/button_episodes"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:text="@string/button_episodes"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>