<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_main_fragments"
    android:background="@color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progress_bar_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:indeterminateTint="@color/teal_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="NestedWeights" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filters_layout_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/filters_background_red"
        android:visibility="gone">

        <EditText
            android:id="@+id/input_name_characters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name_filter_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/choose_status_characters"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/status_filter_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name_characters" />

        <Button
            android:id="@+id/choose_species_characters"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/species_filter_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_status_characters" />

        <Button
            android:id="@+id/choose_type_characters"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/type_filter_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_species_characters" />

        <Button
            android:id="@+id/choose_gender_characters"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/gender_filter_characters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_type_characters" />

        <Button
            android:id="@+id/button_apply_filters_characters"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/apply_filters_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_gender_characters" />

        <Button
            android:id="@+id/button_close_filters_characters"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/close_filters_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_apply_filters_characters" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>