<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_main_fragments"
    android:background="@color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEpisodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progress_bar_episode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:indeterminateTint="@color/teal_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="NestedWeights" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filters_layout_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/filters_background_red"
        android:visibility="gone">

        <EditText
            android:id="@+id/input_name_episode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name_filter_episodes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/choose_episodes_episode"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/episode_filter_episodes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name_episode" />

        <Button
            android:id="@+id/button_apply_filters_episode"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_filters_button"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_episodes_episode" />

        <Button
            android:id="@+id/button_close_filters_episode"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_filters_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_apply_filters_episode" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>