<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_details_fragment"
    android:background="@color/black"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="15"
                android:background="@color/red"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/image_character_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:src="@drawable/splash_main"
                    tools:ignore="NestedWeights" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_id_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_id_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_name_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_name_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="Morty Smith" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_status_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_status_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="Alive" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_species_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_species_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="Human" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_type_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_type_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_gender_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_gender_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="male" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_origin_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_origin_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="Earth" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_location_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_location_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="Earth" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:text="@string/character_created_details"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/main_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/character_created_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/main_text"
                        android:textStyle="italic"
                        tools:text="2017-11-04T18:50:21.651Z" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/character_episodes_list_details"
                        android:textColor="@color/white" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewCharactersDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_character_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>